# OpenGamepadUI

./: .gitignore  .gitmodules  .gutconfig.json  .readthedocs.yaml  .releaserc.yaml  404.html  CREDITS.md  Makefile  README.md  entrypoint.gd  entrypoint.gd.uid  entrypoint.tscn  export_presets.cfg  icon.svg.import  index.html  install-opengamepadui.sh  main.gd  main.tscn  mkdocs.yml  project.godot  sitemap.xml
extensions/core/: Cargo.toml  Makefile
extensions/core/src/: bluetooth.rs  dbus.rs  disk.rs  gamescope.rs  input.rs  lib.rs  logger.rs  network.rs  performance.rs  power.rs  resource.rs  system.rs  vdf.rs
extensions/core/src/bluetooth/: bluez.rs
extensions/core/src/bluetooth/bluez/: adapter.rs  device.rs
extensions/core/src/dbus/: bluez.rs  inputplumber.rs  networkmanager.rs  powerstation.rs  udisks2.rs  upower.rs
extensions/core/src/dbus/bluez/: adapter1.rs  battery_provider_manager1.rs  device1.rs  gatt_manager1.rs  leadvertising_manager1.rs  media1.rs  media_control1.rs  network_server1.rs
extensions/core/src/dbus/inputplumber/: composite_device.rs  dbus_device.rs  event_device.rs  gamepad.rs  hidraw_device.rs  iioimudevice.rs  input_manager.rs  keyboard.rs  mouse.rs  target.rs
extensions/core/src/dbus/networkmanager/: access_point.rs  active.rs  agent_manager.rs  bridge.rs  connection.rs  device.rs  dhcp4config.rs  dns_manager.rs  ip4config.rs  ip6config.rs  loopback.rs  network_manager.rs  settings.rs  statistics.rs  wifi_p2p.rs  wired.rs  wireless.rs
extensions/core/src/dbus/powerstation/: card.rs  connector.rs  core.rs  cpu.rs  gpu.rs  tdp.rs
extensions/core/src/dbus/udisks2/: block.rs  controller.rs  drive.rs  nvme.rs  (+5 more)
extensions/core/src/disk/: udisks2.rs
extensions/core/src/gamescope/: x11_client.rs
extensions/core/src/input/: inputplumber.rs
extensions/core/src/network/: network_manager.rs
extensions/core/src/performance/: powerstation.rs
extensions/core/src/power/: device.rs  upower.rs
extensions/core/src/resource/: resource_processor.rs  resource_registry.rs
extensions/core/src/system/: command.rs  fifo.rs  pty.rs  subreaper.rs
(+3782 files in other folders)
