[package]
name = "opengamepadui-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"] # Compile this crate to a dynamic C library.

[dependencies]
futures-util = "0.3.31"
godot = { version = "0.3.1", features = [
  "experimental-threads",
  "register-docs",
] }
nix = { version = "0.30.1", features = ["term", "process", "fs"] }
once_cell = "1.21.3"
tokio = { version = "1.45.1", features = ["full"] }
zbus = "5.7.1"
zvariant = "5.5.3"
gamescope-x11-client = { git = "https://github.com/ShadowBlip/gamescope-x11-client", branch = "main" }
inotify = "0.11.0"
byte-unit = "5.1.6"
log = "0.4.27"
keyvalues-parser = "0.2.0"
